--- a/css/style.css
+++ b/css/style.css
@@ -489,3 +489,28 @@
     padding-right: 0;
     border-right: none;
 }
+ body{
+    display: block;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    
+}
+.wrapper{
+    padding: 10px ;
+    width: 400px;
+    height: 440px;
+    border: 2px solid rgba(61, 88, 158, 0.5);
+    box-shadow: 0 0 30px rgba(0, 255 , 255, .5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: auto;
+    margin: auto;
+    vertical-align: middle; text-align: center;
+}
+.form-box{
+    font-size: 1rem;
+    text-align: center;
+} 
